--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,8 @@ FROM node:20-alpine
 # Set working directory
 WORKDIR /app
 
+RUN npm install -g @angular/cli
+
 # Install dependencies
 COPY package.json package-lock.json ./
 RUN npm install
